<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/rprnwhq38n"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#212121"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:paddingVertical="11dp">

                <ImageView
                    android:id="@+id/icon_voltar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="13dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/seta_voltar"
                    android:clickable="true"
                    android:focusable="true"/>

                <TextView
                    android:id="@+id/text_voltar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voltar"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rhwlqudtvd4m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="39dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/r586oyfiz9pi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:paddingTop="20dp">

                        <ImageView
                            android:id="@+id/img_logo"
                            android:layout_width="193dp"
                            android:layout_height="193dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="fitXY"
                            android:src="@drawable/logo" />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="7dp"
                android:text="@string/cadastro_hint_nome"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_nome"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/stroke_black"
                android:paddingHorizontal="10dp"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_nascimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="7dp"
                android:text="@string/cadastro_hint_nascimento"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_nascimento"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/stroke_black"
                android:paddingHorizontal="10dp"
                android:inputType="date"
                android:singleLine="true"
                android:hint="DD/MM/AAAA"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_cpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cadastro_hint_cpf"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_cpf"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/stroke_black"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="25dp"
                android:paddingHorizontal="10dp"
                android:inputType="number"
                android:singleLine="true"
                android:hint="000.000.000-00"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="3dp"
                android:text="@string/cadastro_hint_email"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/stroke_black"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="25dp"
                android:paddingHorizontal="10dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="3dp"
                android:text="@string/cadastro_hint_telefone"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_telefone"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/stroke_black"
                android:layout_marginBottom="4dp"
                android:layout_marginHorizontal="25dp"
                android:paddingHorizontal="10dp"
                android:inputType="phone"
                android:singleLine="true"
                android:hint="(XX) XXXXX-XXXX"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="3dp"
                android:text="@string/cadastro_erro_genero"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/rg_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginHorizontal="25dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero_masculino"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"/>

                <RadioButton
                    android:id="@+id/rb_feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero_feminino"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"/>

                <RadioButton
                    android:id="@+id/rb_outro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero_outro"
                    android:textSize="14sp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/txt_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="9dp"
                android:text="@string/cadastro_hint_senha"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_senha"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/stroke_black"
                android:layout_marginBottom="7dp"
                android:layout_marginHorizontal="25dp"
                android:paddingHorizontal="10dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_confirmar_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="7dp"
                android:text="@string/cadastro_hint_confirma_senha"
                android:textColor="#000000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_confirma_senha"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/stroke_black"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="25dp"
                android:paddingHorizontal="10dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />


            <LinearLayout
                android:id="@+id/containerButtonConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_confirm_selector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastro_btn_confirmar"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
